# tp1-distribuidos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose_config.json  compose_config.yaml  docker-compose.yml  docker_compose_builder.py  filter.py  generate_compose.py  merger.py  pyproject.toml  rabbitmq.conf  requirements.txt  test_compose_config.yaml
.kaggle/: build_expected.py  validation.py
chaos_monkey/: Dockerfile  config.ini  kill_script.py  main.py
chaos_monkey/core/: config.py  docker_manager.py  service.py
client/: Dockerfile  analyzer.py  compose_config.yaml  config.ini  main.py
client/core/: analyzer.py
client/processing/: __init__.py  batch.py  (+4 more)
docs/: gateway_resiliencia.md  health_checker_leader_election.md
gateway/: Dockerfile  compose_config.yaml  config.ini  main.py
health_checker/: Dockerfile  config.ini  core.py  hc_heartbeat_client.py  hc_heartbeat_server.py  hc_registry.py  main.py  pool.py  registry.py  server.py
middleware/: __init__.py  mock.py  rabbit_mq.py
shared/: __init__.py  config_parser.py  entity.py  network.py  protocol.py  routing.py  shutdown.py  utils.py
tests/: base.py  conftest.py  test_rabbitmq_middleware.py  test_serialization.py  test_session_apply_wal.py  test_session_manager_persistence.py  test_storage.py  test_storages.py  test_wal_storage.py
worker/: Dockerfile  __init__.py  aggregator.py  base.py  enricher.py  filter.py  filter_tx_2024_2025.py  heartbeat.py  merger.py  output.py  packer.py  session.py  session_manager.py  session_storage.py  types.py  unacked.py  utils.py
(+136 files in other folders)
